--- a/apps/image-editor/package.json
+++ b/apps/image-editor/package.json
@@ -45,7 +45,7 @@
     "not ie <= 9"
   ],
   "dependencies": {
-    "fabric": "^4.2.0",
+    "fabric": "4.6.0",
     "tui-code-snippet": "^2.3.3",
     "tui-color-picker": "^2.2.6"
   }
